--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -31,14 +31,14 @@
 
 .Header__button-close {
   position: absolute;
-  top: 18px;
-  right: 60px;
-  width: 40px;
+  top: 25px;
+  right: 25px;
+  width: 22px;
   background-color: transparent;
   border: none;
   outline: none;
-  height: 40px;
-  background-image: url('../../images/button/Close-black.svg');
+  height: 22px;
+  background-image: url('../../images/button/Close-black22.svg');
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -49,8 +49,9 @@
   background-color: transparent;
   border: none;
   outline: none;
-  background-image: url('../../images/profile/icon__profile.svg');
-  background-position: right;
+  background-image: url('../../images/button/profile.png');
+  background-size: contain;
+  background-position: center;
   background-repeat: no-repeat;
 }
 .Header__button-avatar:hover {
@@ -63,13 +64,14 @@
 .Header__button-open {
   visibility: hidden;
   opacity: 0;
+  pointer-events: none;
+  user-select: none;
   background-color: transparent;
   border: none;
   outline: none;
-  height: 40px;
-  background-image: url('../../images/button/BlackIcon-mainOpen.svg');
-  background-position: center;
-  background-repeat: no-repeat;
+  height: 0;
+  width: 0;
+
 }
 .Header__button-close:hover, .Header__button-open:hover {
   cursor: pointer;
@@ -77,11 +79,19 @@
 }
 
 @media screen and (max-width: 800px) {
+  .Header-hidden {
+    display: none;
+  }
   .Header__button-open {
+    pointer-events: visibleFill;
     width: 40px;
+    height: 40px;
     margin-right: 30px;
     visibility: visible;
     opacity: 1;
+    background-image: url('../../images/button/BlackIcon-mainOpen.svg');
+    background-position: center;
+    background-repeat: no-repeat;
   }
 }
 @media screen and (max-width: 500px) {
@@ -96,4 +106,8 @@
     margin: 0;
     margin-bottom: 20px;
   }
+
+   .Header__button-open {
+     height: 43px;
+   }
 }
